@@ -6,15 +6,14 @@
 		<animation effect="fade" start="100" end="0" delay="450" time="450" easing="inout" tween="cubic" reversible="false" condition="![Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)]">Conditional</animation>
 	</include>
 	<include name="Mod_SimpleWidgetVisibility-On">
-		<!--<visible>!Control.HasFocus(84) + [!Control.HasFocus(83) | [Control.HasFocus(83) + !Skin.HasSetting(HomeClicksSubmenu)]] + !Container(525).OnNext + !Container(525).OnPrevious + !IsEmpty(Window(Home).Property(SkinWidgets_Running)) + [Container(525).HasFocus(1) | Container(525).HasFocus(2) | Container(525).HasFocus(3)]</visible>-->
 		<visible>[!Control.HasFocus(83) | [Control.HasFocus(83) + !Skin.HasSetting(HomeClicksSubmenu)]] + !Container(525).OnNext + !Container(525).OnPrevious + !IsEmpty(Window(Home).Property(SkinWidgets_Running)) + [Container(525).HasFocus(1) | Container(525).HasFocus(2) | Container(525).HasFocus(3)] + !Window.IsVisible(favourites)</visible>
 		<animation type="WindowOpen" reversible="false">
 			<effect type="fade" start="0" end="100" delay="600"  time="450" easing="inout" tween="cubic" reversible="false"/>
 			<effect type="slide" start="0,500" end="0" delay="600" time="450" easing="inout" tween="cubic" reversible="false"/>
 		</animation>
 		<animation type="Visible">
-			<effect type="fade" start="0" end="100" delay="450" time="450" easing="inout" tween="cubic"/>
-			<effect type="slide" start="0,500" end="0" delay="450" time="450" easing="inout" tween="cubic"/>
+			<effect type="fade" start="0" end="100" delay="500" time="450" easing="inout" tween="cubic"/>
+			<effect type="slide" start="0,500" end="0" delay="500" time="450" easing="inout" tween="cubic"/>
 		</animation>
 		<animation type="Hidden" reversible="false" condition="Control.HasFocus(83) | Control.HasFocus(84)">
 			<effect type="fade" end="0" start="100" delay="0"  time="250" easing="inout" tween="cubic" />
