@@ -4,6 +4,8 @@ Added label for simple home widgets
 Changed widget clearlogo placeholders to blank images
 Home list highlight turns off when widgets or power menu on
 Removed "Flatten" from MyVideoNav.xml (Gotham change)
+Fix extrafanart showing in plugin directories
+Fix music panel list not hiding for music info
 
 [B]0.4.6[/B]
 Changes to offset OSD (new style)
